prevent page overflow on sub pages

--- a/pages/uppdrag/Uppdrag.module.css
+++ b/pages/uppdrag/Uppdrag.module.css
@@ -1,5 +1,4 @@
 .wrapper {
-  min-width: 800px;
   max-width: 800px;
   padding: 0 2rem;
 }
